...
        ) {
            item {
                Column(modifier = Modifier.fillMaxWidth()) {
                    Button(onClick = onStart) {
                        Icon(imageVector = Icons.Default.PlayArrow, contentDescription = null)
                        Spacer(modifier = Modifier.size(8.dp))
                        Text("Start or Resume Day")
                    }
                }
            }

            item {
                DayInfo(day = day, use24HourClock = use24HourClock)
...
